# puzzle

./: .gitignore  .gitmodules  .pdm-python  AutoScript.code-workspace  README.md  init.sh  manage.py  puzzle.py  pyproject.toml  requirements.txt  run.bat  slide.py  start.sh  stop.sh
AutoScript/conf/: uwsgi.ini
AutoScript/src/AutoScript/: settings.py  urls.py  wsgi.py
AutoScript/src/app/: admin.py  models.py  serializers.py  slide.py  urls.py  views.py
AutoScript/src/common/: validators.py
Monitor/: data.json  data2.json  pyproject.toml
Monitor/src/: main.py  maoyan_monitor.py  moniter.py  monitor.py  proxy.py  settings.py
Monitor/src/app/: views.py
conf/: uwsgi.ini
doc/: 后端api&数据库设计.xmind
src/: __init__.py  puzzle.py
src/AutoScript/: asgi.py  settings.py
src/app/: admin.py  models.py  serializers.py  urls.py  views.py
src/app/migrations/: 0001_initial.py  0002_remove_password_password_alter_password_id.py
src/common/: restapi.py  validators.py
