[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "setuptools",
    "lmdb @ file:./py-lmdb",
    "paddlepaddle",
    "paddleocr",
    "fastapi",
    "uvicorn",
    "opencv-python",
    "pillow",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/project"]
