[project]
name = ""
version = ""
description = ""
authors = [
    {name = "hmeqo", email = "hmeqocoliniliad@gmail.com"},
]
dependencies = [
    "httpx>=0.25.0",
    "wxpusher>=2.2.0",
    "rich>=13.6.0",
    "fastapi>=0.104.1",
    "uvicorn[base]>=0.24.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

